--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -16,8 +16,7 @@ google_repo: https://packages.cloud.google.com
 
 # kubernetes for ubuntu
 kube_ubuntu_repo_gpg: "{{ google_repo }}/apt/doc/apt-key.gpg"
-kube_ubuntu_dist_repo: http://apt.kubernetes.io/
 kube_dist: kubernetes-xenial
-kube_ubuntu_apt_repo: "deb {{kube_ubuntu_dist_repo}} {{kube_dist}} main"
+kube_ubuntu_apt_repo: "deb {{google_repo}} {{kube_dist}} main"
 
 
