--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -19,4 +19,6 @@ kube_ubuntu_repo_gpg: "{{ google_repo }}/apt/doc/apt-key.gpg"
 kube_dist: kubernetes-xenial
 kube_ubuntu_apt_repo: "deb {{google_repo}}/apt/ {{kube_dist}} main"
 
+kubeadm_conf: /etc/systemd/system/kubelet.service.d/10-kubeadm.conf
+
 
