--- a/tasks/install-kube-ubuntu.yml
+++ b/tasks/install-kube-ubuntu.yml
@@ -16,4 +16,11 @@
       - kubectl
     state: present
 
+- name: add cgroup driver
+  lineinfile:
+    path: /etc/systemd/system/kubelet.service.d/10-kubeadm.conf
+    insertafter: 'Environment="KUBELET_CONFIG_ARGS=--config=/var/lib/kubelet/config.yaml"'
+    line: Environment="cgroup-driver=systemd/cgroup-driver=cgroupfs"
+
+
 
