--- a/hosts.yml
+++ b/hosts.yml
@@ -4,6 +4,8 @@ all:
     master:
       hosts:
         master01
+      vars:
+        ansible_connection: local
     worker:
       hosts:
         server01
