--- a/tasks/init-cluster-master.yml
+++ b/tasks/init-cluster-master.yml
@@ -7,7 +7,7 @@
   become: true
   become_user: "{{kube_non_root_user}}"
   file:
-    path: "{{kube_non_root_user_home_dir}}"/.kube
+    path: "{{kube_non_root_user_home_dir}}/.kube"
     state: directory
   register: kube_config_user_dir
 
