--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -22,7 +22,7 @@ kube_ubuntu_apt_repo: "deb {{google_repo}}/apt/ {{kube_dist}} main"
 kubeadm_conf: /etc/systemd/system/kubelet.service.d/10-kubeadm.conf
 
 # kubernetes master
-kube_apiserver-ip: "{{ansible_default_ipv4.address}}"
+kube_apiserver_ip: "{{ansible_default_ipv4.address}}"
 
 # set the below value as per your environment.
 kube_pod_network: calico
