--- a/tasks/init-cluster-master.yml
+++ b/tasks/init-cluster-master.yml
@@ -1,7 +1,16 @@
 ---
 
 - name: init kubeadm
-  command: kubeadm init --apiserver-advertise-address={{kube_apiserver_ip}} --pod-network-cidr={{kube_pod_network_cidr}}
+  command: >
+    kubeadm init
+    --apiserver-advertise-address={{kube_apiserver_ip}}
+    --pod-network-cidr={{kube_pod_network_cidr}}
+    --ignore-preflight-errors=all
+  register: kubeadm_init
+
+- name: print kubeadm init output
+  debug:
+    var: kubeadm_init.stdout
 
 - name: create kube directory for non-root user
   become: true
