--- a/tasks/install-kube-ubuntu.yml
+++ b/tasks/install-kube-ubuntu.yml
@@ -21,6 +21,7 @@
     path: "{{kubeadm_conf}}"
     insertafter: 'Environment="KUBELET_CONFIG_ARGS=--config=/var/lib/kubelet/config.yaml"'
     line: Environment="cgroup-driver=cgroupfs"
+    notify: restart kubelet
 
 
 
