--- a/tasks/init-cluster-master.yml
+++ b/tasks/init-cluster-master.yml
@@ -1,6 +1,7 @@
 ---
 
 - name: init kubeadm
+  changed: false
   command: >
     kubeadm init
     --apiserver-advertise-address={{kube_apiserver_ip}}
