--- a/tasks/init-cluster-master.yml
+++ b/tasks/init-cluster-master.yml
@@ -16,14 +16,13 @@
   become: true
   become_user: "{{kube_non_root_user}}"
   file:
-    path: "{{kube_non_root_user_home_dir}}/.kube"
+    path: {{kube_non_root_user_home_dir}}/.kube
     state: directory
-  register: kube_config_user_dir
 
 - name: copy kubeconfig to user directory
   copy:
     src: /etc/kubernetes/admin.conf
-    dest: kube_config_user_dir.path
+    dest: {{kube_non_root_user_home_dir}}/.kube
     mode: preserve
     owner: "{{kube_non_root_user}}"
     group: "{{kube_non_root_user}}"
