--- a/tasks/install-kube-ubuntu.yml
+++ b/tasks/install-kube-ubuntu.yml
@@ -22,6 +22,13 @@
 #    insertafter: 'Environment="KUBELET_CONFIG_ARGS=--config=/var/lib/kubelet/config.yaml"'
 #    line: Environment="cgroup-driver=cgroupfs"
 
+- name: change cgroup driver from systemd to cgroupfs
+  lineinfile:
+    path: "{{kubelet_conf}}"
+    search_string: "cgroupDriver: systemd"
+    line: "cgroupDriver: cgroupfs"
+    state: present
+
 - name: restart kubelet
   service: name=kubelet state=restarted
 
