--- a/tasks/install-kube-ubuntu.yml
+++ b/tasks/install-kube-ubuntu.yml
@@ -25,9 +25,9 @@
 - name: change cgroup driver from systemd to cgroupfs
   lineinfile:
     path: "{{kubelet_conf}}"
-    search_string: "cgroupDriver: systemd"
+    firstmatch: "cgroupDriver: systemd"
     line: "cgroupDriver: cgroupfs"
-    state: present
+    state: absent
 
 - name: restart kubelet
   service: name=kubelet state=restarted
