--- a/tasks/init-cluster-master.yml
+++ b/tasks/init-cluster-master.yml
@@ -27,6 +27,7 @@
     state: directory
 
 - name: copy kubeconfig to user directory
+  become: true
   copy:
     src: /etc/kubernetes/admin.conf
     dest: "{{kube_non_root_user_home_dir}}/.kube/config"
