--- a/tasks/init-cluster-master.yml
+++ b/tasks/init-cluster-master.yml
@@ -22,17 +22,23 @@
   become: true
   become_user: "{{kube_non_root_user}}"
   file:
-    path: "{{kube_non_root_user_home_dir}}/.kube/config"
+    path: "{{kube_non_root_user_home_dir}}"/.kube/config
     state: directory
 
 - name: copy kubeconfig to user directory
-  copy:
-    src: /etc/kubernetes/admin.conf
-    dest: "{{kube_non_root_user_home_dir}}/.kube/config"
-    mode: 600
-    owner: "{{kube_non_root_user}}"
-    group: "{{kube_non_root_user}}"
-    delegate_to: localhost
+  shell: sudo cp -i /etc/kubernetes/admin.conf "{{kube_non_root_user_home_dir}}"/.kube/config
+
+- name: chown kubeconfig directory
+  shell: sudo chown "{{kube_non_root_user_home_dir}}":"{{kube_non_root_user_home_dir}}" "{{kube_non_root_user_home_dir}}"/.kube/config
+
+#- name: copy kubeconfig to user directory --> NOT WORKING. GETTING PERMISSION DENIED
+#  copy:
+#    src: /etc/kubernetes/admin.conf
+#    dest: "{{kube_non_root_user_home_dir}}/.kube/config"
+#    mode: 600
+#    owner: "{{kube_non_root_user}}"
+#    group: "{{kube_non_root_user}}"
+#    delegate_to: localhost
 
 - name: download pod network manifest
   become: true
