--- a/tasks/init-cluster-master.yml
+++ b/tasks/init-cluster-master.yml
@@ -22,14 +22,14 @@
   become: true
   become_user: "{{kube_non_root_user}}"
   file:
-    path: "{{kube_non_root_user_home_dir}}"/.kube/config
+    path: "{{kube_non_root_user_home_dir}}/.kube/config"
     state: directory
 
 - name: copy kubeconfig to user directory
-  shell: sudo cp -i /etc/kubernetes/admin.conf "{{kube_non_root_user_home_dir}}"/.kube/config
+  shell: sudo cp -i /etc/kubernetes/admin.conf "{{kube_non_root_user_home_dir}}/.kube/config"
 
 - name: chown kubeconfig directory
-  shell: sudo chown "{{kube_non_root_user_home_dir}}":"{{kube_non_root_user_home_dir}}" "{{kube_non_root_user_home_dir}}"/.kube/config
+  shell: sudo chown "{{kube_non_root_user_home_dir}}":"{{kube_non_root_user_home_dir}}" "{{kube_non_root_user_home_dir}}/.kube/config"
 
 #- name: copy kubeconfig to user directory --> NOT WORKING. GETTING PERMISSION DENIED
 #  copy:
