--- a/tasks/init-cluster-master.yml
+++ b/tasks/init-cluster-master.yml
@@ -29,7 +29,7 @@
   shell: sudo cp -i /etc/kubernetes/admin.conf "{{kube_non_root_user_home_dir}}/.kube/config"
 
 - name: chown kubeconfig directory
-  shell: sudo chown "{{kube_non_root_user}}":"{{kube_non_root_user}}" "{{kube_non_root_user_home_dir}}/.kube/config"
+  shell: sudo chown -R "{{kube_non_root_user}}":"{{kube_non_root_user}}" "{{kube_non_root_user_home_dir}}/.kube/config"
 
 #- name: copy kubeconfig to user directory --> NOT WORKING. GETTING PERMISSION DENIED
 #  copy:
@@ -41,6 +41,7 @@
 #    delegate_to: localhost
 
 - name: deploy podnetwork
+  become_user: "{{kube_non_root_user}}"
   shell: kubectl apply -f calico.yml
   register: podnetwork
   ignore_errors: true
