--- a/tasks/init-cluster-master.yml
+++ b/tasks/init-cluster-master.yml
@@ -41,7 +41,7 @@
     #    delegate_to: localhost
 
     - name: deploy podnetwork
-      shell: kubectl apply -f files/calico.yml
+      shell: kubectl apply -f calico.yml
       register: podnetwork
 
   become: true
